JFR TestClassLoadEvent.java failed due to EXCEPTION_ACCESS_VIOLATION

XMLWordPrintable

    • b18
    • x86_64
    • windows
    • Verified

      The following test failed in the jdk/jdk CI:

      jdk/jfr/event/runtime/TestClassLoadEvent.java

      Here's a snippet of the log file:

      ----------System.out:(23/1141)*----------
      #
      # A fatal error has been detected by the Java Runtime Environment:
      #
      # EXCEPTION_ACCESS_VIOLATION (0xc0000005) at pc=0x00007ffa1dbb32ab, pid=88496, tid=135856
      #
      # JRE version: Java(TM) SE Runtime Environment (13.0) (build 13-internal+0-jdk13-jdk.822)
      # Java VM: Java HotSpot(TM) 64-Bit Server VM (13-internal+0-jdk13-jdk.822, mixed mode, tiered, compressed oops, g1 gc, windows-amd64)
      # Problematic frame:
      # [2.372s][error][jfr,system] JfrJvmtiAgent::retransformClasses failed
      V [jvm.dll+0x1e32ab][thread 82388 also had an error]
        CodeBuffer::finalize_oop_references+0x17b
      #
      # Core dump will be written. Default location: T:\\testoutput\\test-support\\jtreg_open_test_jdk_tier1_part3\\scratch\\2\\hs_err_pid88496.mdmp
      #
      # An error report file with more information is saved as:
      # T:\\testoutput\\test-support\\jtreg_open_test_jdk_tier1_part3\\scratch\\2\\hs_err_pid88496.log

      [error occurred during error reporting (), id 0xc0000005, EXCEPTION_ACCESS_VIOLATION (0xc0000005) at pc=0x00007ffa1e08fc94]

      #
      # If you would like to submit a bug report, please visit:
      # http://bugreport.java.com/bugreport/crash.jsp
      #
      ----------System.err:(0/0)----------

      Since this is a tier1 failures, I've set the initial priority to P2.

            Assignee:
            Coleen Phillimore
            Reporter:
            Daniel Daugherty
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: