8222379: JFR TestClassLoadEvent.java failed due to EXCEPTION_ACCESS_VIOLATION

Give fatal error if CDS loses archive mapping.

Reviewed-by: iklam, ccheung, jiangli